# SimpleRasterizer

./: AdjacentTriangleTester.cpp  CMakeLists.txt  CanvasWindow.cpp  CanvasWindow.h  DrawLineTester.cpp  Image.cpp  Image.h  KeyCode.h  Matrix.cpp  Matrix.h  Matrix2.cpp  Matrix2.h  Matrix4.cpp  Matrix4.h  README.md  Rasterizer.cpp  Rasterizer.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector4.cpp  Vector4.h  Window.cpp  Window.h  main.cpp
